added media queries to make site responsive for larger screens, added styling to teams and facts sections

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <div class="heroTxt">
                 <h1>BUJO</h1>
                 <h2>Art + Organization</h2>
-                 <button>Get Started</button>
+                 <button class="headerBtn">Get Started</button>
             </div>
             
-            <img src="./Assets/Untitled_design-removebg-preview.png" alt="screenshot" srcset="">
+            <img id="mainImg" src="./Assets/Untitled_design-removebg-preview.png" alt="screenshot" srcset="">
         </div>
     </header>
  
@@ -47,7 +47,7 @@
       <section class="bodysection" id="solutions">
 
         <div class="solutionsWrapper">
-            <h2>BuJo helps you</h2>
+            <h2 id="solutionsTitle">BuJo helps you</h2>
             <div class="factsWrapper">
                 <div class="facts">
                     <h3 class="factsTitle">Organize</h3>
@@ -100,27 +100,28 @@
             <button class="startBtn">Get Started</button>
         </div>
       </section>
+
       <section class="bodysection" id="team">
-          <h2 class="teamTitle"></h2>
+          <h2 class="teamTitle">Meet the Team</h2>
           <div class="teamWrapper">
               <div class="teamMember">
                   <img class="teamImg"src="" alt="">
                   <h3>Najwana</h3>
-                  <p>Etiam non quam lacus suspendisse faucibus interdum posuere lorem.  </p>
+                  <p> Front End Engineer </p>
                   <a href="">Portfolio</a>
                   <a href="">GitHub</a>
               </div>
               <div class="teamMember">
                 <h3>Miguel</h3>
                   <img class="teamImg src="" alt="">
-                  <p>Etiam non quam lacus suspendisse faucibus interdum posuere lorem.  </p>
+                  <p> Back End Engineer </p>
                   <a href="">Portfolio</a>
                   <a href="">GitHub</a>
               </div>
               <div class="teamMember">
                 <h3>Dave</h3>
                   <img class="teamImg src="" alt="">
-                  <p>Etiam non quam lacus suspendisse faucibus interdum posuere lorem.  </p>
+                  <p> UX Designer </p>
                   <a href="">Portfolio</a>
                   <a href="">LinkedIn</a>
               </div>
