Added content for Learn page, Added video

--- a/index.html
+++ b/index.html
@@ -118,23 +118,24 @@
               <div class="teamMember">
                   <img class="teamImg"src="" alt="">
                   <h3>Najwana</h3>
-                  <p> Front End Engineer </p>
-                  <a href="">Portfolio</a>
-                  <a href="">GitHub</a>
+                  <img class="teamImg src="" alt="">
+                  <p> UX Engineer </p>
+                  <a href="https://najwanan.github.io/Portfolio/" target="_blank">Portfolio</a>
+                  <a href="https://github.com/unnamedrd?tab=repositories" target="_blank">GitHub</a>
               </div>
               <div class="teamMember">
                 <h3>Miguel</h3>
                   <img class="teamImg src="" alt="">
-                  <p> Back End Engineer </p>
-                  <a href="">Portfolio</a>
-                  <a href="">GitHub</a>
+                  <p> Full Stack Engineer </p>
+                  <a href="https://miguelkristian.com/" target="_blank">Portfolio</a>
+                  <a href="http://github.com/miguelkristian17/" target="_blank">GitHub</a>
               </div>
               <div class="teamMember">
                 <h3>Dave</h3>
                   <img class="teamImg src="" alt="">
                   <p> UX Designer </p>
-                  <a href="">Portfolio</a>
-                  <a href="">LinkedIn</a>
+                  <a href="https://www.novakdr.com/" target="_blank">Portfolio</a>
+                  <a href="https://www.linkedin.com/in/novakdr/" target="_blank">LinkedIn</a>
               </div>
           </div>
 
