fixed features layout

--- a/Learn.html
+++ b/Learn.html
@@ -106,10 +106,10 @@
             <div class="menu">
                 <img src="./Assets/Black & Yellow Museum Logo.png" alt="logo" class="logo">
                 <ul>
-                    <li><a href="#story">Our Story</a></li> 
+                    <li><a href="index.html">Our Story</a></li> 
                     <li><a href="Learn.html" target="_blank">Learn</a></li>
-                    <li><a href="#solutions">Create</a></li>
-                    <li><a href="#team">Team</a></li>
+                    <li><a href="index.html">Create</a></li>
+                    <li><a href="index.html">Team</a></li>
                    
                 </ul>
             </div>
