fixed video display

--- a/Learn.html
+++ b/Learn.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="video">
                     <video id="mainVid" width="400" height="245" controls autoplay>
-                        <source src="./Assets/My Movie.mp4" type=video/mp4>
+                        <source src="./Assets/BujoDemo.mp4" type=video/mp4>
                     </video>
                 </div>
                
