fixed alignment of footer

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </section>
       <footer>
           <div>
-              <p>Made with <a href=""></a> by Najwana, Miguel and Dave</p>
+              <p>Made by Najwana, Miguel and Dave</p>
           </div>
       </footer>
 </body>
